--- a/German_IMB_Class.ipynb
+++ b/German_IMB_Class.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOZ3VGt7HKLhD03ezkLTaA",
+      "authorship_tag": "ABX9TyOAQN8TcXaG6l3PCDwCzQ8+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -612,6 +612,32 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The results reflect the performance of a model evaluated through Repeated Stratified K-Fold cross-validation, specifically using the F2 score as a metric. The F2 score is particularly focused on minimizing false negatives, giving more importance to recall than to precision. Here’s a breakdown of what these results mean:\n",
+        "\n",
+        "F2 Scores per Fold\n",
+        "This array lists the F2 scores obtained in each fold of the cross-validation process. There are 30 scores corresponding to 10 folds repeated 3 times each. The values vary from a low of about 0.628 to a high of about 0.845, indicating variability in the model's performance across different subsets of the data. Here’s what some specific scores might imply:\n",
+        "\n",
+        "Higher scores (e.g., 0.845, 0.777) suggest folds where the model was very effective at minimizing false negatives, meaning it successfully identified most of the positive cases.\n",
+        "Lower scores (e.g., 0.628, 0.630) indicate folds where the model missed more positive cases, which could be due to various factors such as a particularly challenging subset of data in those folds.\n",
+        "Mean F2 Score\n",
+        "The mean F2 score across all folds is approximately 0.704, which provides a general measure of the model's average effectiveness at minimizing false negatives across all repeats and folds. This is a decent average score, suggesting that overall, the model is fairly good at identifying positive cases without being too lenient (which would reduce precision too much).\n",
+        "\n",
+        "Standard Deviation of F2 Scores\n",
+        "The standard deviation of the F2 scores is about 0.051, which measures the amount of variation or dispersion of the F2 scores from the mean. A lower standard deviation would indicate that the model's performance is more consistent across different folds, whereas a higher standard deviation shows more variability. In this case, the standard deviation is relatively moderate, indicating some variability in how well the model performs depending on the specific data it is trained on during each fold.\n",
+        "\n",
+        "Implications\n",
+        "Model Reliability: The moderate standard deviation suggests that while the model generally performs well, its performance might be somewhat dependent on the specific characteristics of the data in each fold. This could be a point to investigate further—perhaps by looking at feature importance or considering additional feature engineering to stabilize performance across folds.\n",
+        "Model Suitability: If minimizing false negatives is critical (for instance, in medical diagnosis or fraud detection), the model might still need tuning to enhance reliability, especially in the folds where performance dips.\n",
+        "Next Steps: You could explore alternative models, additional preprocessing steps, or more sophisticated ensemble methods to increase the model's robustness and average F2 score. Additionally, analyzing the characteristics of the data where the model performs poorly could provide insights into further improvements.\n",
+        "This comprehensive evaluation helps ensure that the model is not only theoretically sound but also practically effective in real-world conditions, tailored specifically to the priorities set out by the F2 scoring"
+      ],
+      "metadata": {
+        "id": "aB5ArhTsJeEm"
+      }
     },
     {
       "cell_type": "code",
